5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1836_1277.log
== TEST (2019-06-27 10:56:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = int(input("Digite o codigo de uma cidade: ")
y= int(input("Digite o codigo de uma cidade: ")

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]]
print(quadro(2,1))
					
					
					
					
fg4
					 
-- ERROR:
File "XXXX", line 5
    y= int(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:57:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
from math import*

x =int(input("Digite o codigo de uma cidade: ")
y= int(input("Digite o codigo de uma cidade: ")

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]]
print(quadro(2,1))
					
					
					
					
fg4
					 
-- ERROR:
File "XXXX", line 6
    y= int(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:58:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
from math import*

x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]]
print(quadro(2,1))
					
					
					
					
fg4
					 
-- ERROR:
File "XXXX", line 15
    print(quadro(2,1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:58:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
from math import*

x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]]
print(quadro[2,1])
					
					
			
					 
-- ERROR:
File "XXXX", line 15
    print(quadro[2,1])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:59:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
from math import*

x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]]
x = quadro[1,1]
print(x)
					
					
			
					 
-- ERROR:
File "XXXX", line 15
    x = quadro[1,1]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:00:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
from math import*

x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]]

print(quadro)
					
					
			
					 
-- ERROR:
File "XXXX", line 16
    print(quadro)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:01:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
from math import*

x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]]
print(quadro)
					
					
			
					 
-- ERROR:
File "XXXX", line 15
    print(quadro)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:14:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
from math import*

x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]]

print(quadro)
					
					
			
					 
-- ERROR:
File "XXXX", line 16
    print(quadro)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:44:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
from math import*

x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]]

print(quadro)
					
					
			
					 
-- ERROR:
File "XXXX", line 16
    print(quadro)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:45:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
from math import*

x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]]
print(quadro)
					
					
			
					 
-- ERROR:
File "XXXX", line 15
    print(quadro)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:45:39) 
-- CODE:
from numpy import*
from numpy.linalg import*


x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]]
print(quadro)
					
					
			
					 
-- ERROR:
File "XXXX", line 15
    print(quadro)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:45:54) 
-- CODE:
from numpy import*
from numpy.linalg import*


x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]]
print(x)
					
					
			
					 
-- ERROR:
File "XXXX", line 15
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:46:35) 
-- CODE:
from numpy import*
from numpy.linalg import*


x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:46:45) 
-- CODE:
from numpy import*
from numpy.linalg import*


x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:47:02) 
-- CODE:
from numpy import*
from numpy.linalg import*


x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
print(quadro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:51:45) 
-- CODE:
from numpy import*
from numpy.linalg import*


x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
i=0
for i in quadro:
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:52:18) 
-- CODE:
from numpy import*
from numpy.linalg import*


x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
i=0
for i in quadro:
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:53:33) 
-- CODE:
from numpy import*
from numpy.linalg import*


x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
i=0
for i in quadro:
	if x == y:
		print(0)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:53:48) 
-- CODE:
from numpy import*
from numpy.linalg import*


x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
i=0
for i in quadro:
	if x == y:
print(0)
	
-- ERROR:
File "XXXX", line 18
    print(0)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:48:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet =zeros(7,dtype=int)
for i in range(7):
	vet[i] = aux
	aux = aux + 111
for i in range(7):
	if(x==vet[i]):
		a =i
	if(y==vet[i]):
		b=i
print(mat[a,b])		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:49:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet =zeros(7,dtype=int)
for i in range(7):
	vet[i] = aux
	aux = aux + 111
for i in range(7):
	if(x==vet[i]):
		a =i
	if(y==vet[i]):
		b=i
print(mat[a,b])		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:49:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet =zeros(7,dtype=int)
for i in range(7):
	vet[i] = aux
	aux = aux + 111
for i in range(7):
	if(x==vet[i]):
		a =i
	if(y==vet[i]):
		b=i
print(quadro[a,b])		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:23:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

x =int(input("Digite o codigo de uma cidade: "))
y= int(input("Digite o codigo de uma cidade: "))

quadro = array([[0,2,11,6,15,11,1],
					[2,0,7,12,4,2,15],
					[11,7,0,11,8,3,13],
					[6,12,11,0,1,2,1],
					[15,4,8,10,0,5,13],
					[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])
a=1
b=0
aux=111
vet =zeros(7,dtype=int)
for i in range(7):
	vet[i] = aux
	aux = aux + 111
for i in range(7):
	if(x==vet[i]):
		a =i
	if(y==vet[i]):
		b=i
print(quadro[a,b])		
	
	
-- EXECUTION TIME:
1.02125
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
